# pygenray

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  README.md  dev.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: api.md  building_notes.md  conf.py  index.md  quick_start.md  ray_physics.md
src/pygenray/: __about__.py  __init__.py  _mp_worker.py  _utils.py  eigenrays.py  environment.py  integration_processes.py  jax_playground.py  launch_rays.py  multi_processing.py  pygenray_scipy.py  ray_objects.py
src/pygenray/.ipynb_checkpoints/: matlab_wrapper-checkpoint.py
src/pygenray/archive/: matlab_wrapper.py  matlab_wrapper_test.py  pygenray.py  pygenray_jax.py  shared_memory_test.py
src/pyigenray/: __init__.py  environment.py  pygenray_jax.py  pygenray_scipy.py  shared_memory_test.py
src/pyigenray/archive/: jax_toolbox.py  pyigenray.py  shared_memory.py
tests/: conftest.py  test_environment.py  test_physics.py  test_ray_objects.py  test_vmap.py
tests/fixtures/: munk_regression.npz
