[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyigenray"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "John Ragland", email = "john.ragland@whoi.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "xarray",
  "jax",
  "diffrax",
]
[project.optional-dependencies]
docs = [
  "furo",
  "myst_parser >=0.13",
  "sphinx >=4.0",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
]

[project.urls]
Documentation = "https://github.com/John Ragland/pyigenray#readme"
Issues = "https://github.com/John Ragland/pyigenray/issues"
Source = "https://github.com/John Ragland/pyigenray"

[tool.hatch.version]
path = "src/pyigenray/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyigenray tests}"

[tool.coverage.run]
source_pkgs = ["pyigenray", "tests"]
branch = true
parallel = true
omit = [
  "src/pyigenray/__about__.py",
]

[tool.coverage.paths]
pyigenray = ["src/pyigenray", "*/pyigenray/src/pyigenray"]
tests = ["tests", "*/pyigenray/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
